[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlx-dqn-dashboard"
version = "0.1.0"
description = "MLX Deep Q-Network with GitHub Pages Dashboard"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.9,<3.13"
dependencies = [
    "mlx>=0.15.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.0.0",
    "tqdm>=4.65.0",
    "plotly>=5.15.0",
    "jinja2>=3.1.0",
    "imageio>=2.31.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.hatchling.build.targets.wheel]
packages = ["src"]

[tool.hatchling.build.targets.sdist]
include = ["/src", "/docs", "/tests"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88
